Shooting and bullet pool

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </style>
 
     <script src ="./lib/phaser.js"></script>
+    <script src ="./src/prefabs/SwordBeam.js"></script>
+    <script src ="./src/prefabs/SwordGroup.js"></script>
     <script src ="./src/scenes/Menu.js"></script>
     <script src ="./src/scenes/Play.js"></script>
     <script src ="./src/main.js"></script>
