Tracking and guns

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src ="./lib/phaser.js"></script>
     <script src ="./src/prefabs/SwordBeam.js"></script>
     <script src ="./src/prefabs/SwordGroup.js"></script>
+    <script src ="./src/prefabs/Tracer.js"></script>
+    <script src ="./src/prefabs/TracerGroup.js"></script>
     <script src ="./src/prefabs/Scout.js"></script>
     <script src ="./src/prefabs/ScoutGroup.js"></script>
     <script src ="./src/scenes/Menu.js"></script>
