Enemy bullets, sword piercing

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script src ="./src/prefabs/TracerGroup.js"></script>
     <script src ="./src/prefabs/Scout.js"></script>
     <script src ="./src/prefabs/ScoutGroup.js"></script>
+    <script src ="./src/prefabs/BasicBullet.js"></script>
+    <script src ="./src/prefabs/BasicBulletGroup.js"></script>
     <script src ="./src/scenes/Menu.js"></script>
     <script src ="./src/scenes/Play.js"></script>
     <script src ="./src/main.js"></script>
