--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script src ="./src/prefabs/BasicBulletGroup.js"></script>
     <script src ="./src/prefabs/Ammo.js"></script>
     <script src ="./src/prefabs/AmmoGroup.js"></script>
+    <script src ="./src/prefabs/Power.js"></script>
+    <script src ="./src/prefabs/PowerGroup.js"></script>
     <script src ="./src/scenes/Menu.js"></script>
     <script src ="./src/scenes/Play.js"></script>
     <script src ="./src/main.js"></script>
