Fast bullet added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script src ="./src/prefabs/ScoutGroup.js"></script>
     <script src ="./src/prefabs/BasicBullet.js"></script>
     <script src ="./src/prefabs/BasicBulletGroup.js"></script>
+    <script src ="./src/prefabs/FastBullet.js"></script>
+    <script src ="./src/prefabs/FastBulletGroup.js"></script>
     <script src ="./src/prefabs/Ammo.js"></script>
     <script src ="./src/prefabs/AmmoGroup.js"></script>
     <script src ="./src/prefabs/Power.js"></script>
