All enemy types

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <script src ="./src/prefabs/TracerGroup.js"></script>
     <script src ="./src/prefabs/Scout.js"></script>
     <script src ="./src/prefabs/ScoutGroup.js"></script>
+    <script src ="./src/prefabs/Regular.js"></script>
+    <script src ="./src/prefabs/RegularGroup.js"></script>
+    <script src ="./src/prefabs/Heavy.js"></script>
+    <script src ="./src/prefabs/HeavyGroup.js"></script>
     <script src ="./src/prefabs/BasicBullet.js"></script>
     <script src ="./src/prefabs/BasicBulletGroup.js"></script>
     <script src ="./src/prefabs/FastBullet.js"></script>
