--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bullet Hell (temp)</title>
+    <title>Mecha Storm</title>
     <style>
         body {
             background-color: rgb(53, 53, 58);
