Basic Boss Implementation

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
     <script src ="./src/prefabs/RegularGroup.js"></script>
     <script src ="./src/prefabs/Heavy.js"></script>
     <script src ="./src/prefabs/HeavyGroup.js"></script>
+    <script src ="./src/prefabs/Cyborg.js"></script>
+    <script src ="./src/prefabs/CyborgGroup.js"></script>
     <script src ="./src/prefabs/BasicBullet.js"></script>
     <script src ="./src/prefabs/BasicBulletGroup.js"></script>
     <script src ="./src/prefabs/FastBullet.js"></script>
     <script src ="./src/prefabs/FastBulletGroup.js"></script>
+    <script src ="./src/prefabs/EggBullet.js"></script>
+    <script src ="./src/prefabs/EggBulletGroup.js"></script>
     <script src ="./src/prefabs/Ammo.js"></script>
     <script src ="./src/prefabs/AmmoGroup.js"></script>
     <script src ="./src/prefabs/Power.js"></script>
