--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src ="./src/prefabs/PowerGroup.js"></script>
     <script src ="./src/scenes/Menu.js"></script>
     <script src ="./src/scenes/Play.js"></script>
+    <script src ="./src/scenes/Pause.js"></script>
     <script src ="./src/main.js"></script>
 </head>
 <body>
